--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Malay Nayak</title>
+    <title>Malay Nayak | PHP Developer</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -74,8 +74,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-<!--                     <img class="img-responsive" src="img/profile.png" alt="">
- -->                    <div class="intro-text">
+                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <div class="intro-text">
                         <span class="name">Malay Nayak</span>
                         <hr class="star-light">
                         <span class="skills">PHP Web Developer</span>
@@ -174,7 +174,7 @@
                     <p>Hello! My name is Malay Nayak and I have more than two years of experience in PHP and Web developement.I have sucessfully handled numerous projects based on various PHP frameworks(Yii,Drupal,Prestashop) conjunction with other modern web technologies like mySQL, jQuery,Angular-Js, AJAX, HTML5, CSS3.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="MalayCV.pdf" class="btn btn-lg btn-outline">
+                    <a target="_blank" href="MalayCV.pdf" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Download CV
                     </a>
                 </div>
