--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <p>Hello! My name is Malay Nayak and I have more than two years of experience in PHP and Web developement.I have sucessfully handled numerous projects based on various PHP frameworks(Yii,Drupal,Prestashop) conjunction with other modern web technologies like mySQL, jQuery,Angular-Js, AJAX, HTML5, CSS3.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a target="_blank" href="MalayCV.pdf" class="btn btn-lg btn-outline">
+                    <a download href="MalayCV.pdf" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Download CV
                     </a>
                 </div>
@@ -527,7 +527,7 @@
     <script src="js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
     <script src="js/classie.js"></script>
     <script src="js/cbpAnimatedHeader.js"></script>
 
