--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <h1 class="mb-0">Malay
             <span class="text-primary">Nayak</span>
           </h1>
-          <div class="subheading mb-5">Hyderabad, India &nbsp;
+          <div class="subheading mb-5"><i class="fa fa-map-marker" aria-hidden="true"></i> Hyderabad, India &nbsp;
             <a href="mailto:malay.kanta.nayak@gmail.com">
               <i class="fa fa-envelope-o" aria-hidden="true"></i> malay.kanta.nayak@gmail.com</a>
             &nbsp;
