--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             &nbsp;
             <a href="javascript:void(0);">
               <i class="fa fa-mobile" aria-hidden="true"></i>
-                +91 7742067545 / +91 9439202321<a>
+                +91 7742067545 / +91 9337518855<a>
           </div>
           <p>I am a self motivated person who likes challenging works and loves to explore and learn new techonologies.</p>
           <p class="mb-5">I have several years of experince into full stack web developement mainly into various open source technologies like PHP, Drupal, Laravel, Yii, MEAN stack. </p>
@@ -123,11 +123,21 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">Senior Associate</h3>
+              <div class="subheading mb-3">Cognizant</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">July 2019 - Present</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">Senior Software Engineer</h3>
               <div class="subheading mb-3">Techaspect</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">June 2017 - Present</span>
+              <span class="text-primary">June 2017 - July 2019</span>
             </div>
           </div>
 
@@ -215,6 +225,10 @@
               <i class="devicon-drupal-plain-wordmark"></i>
             </li>
             <li class="list-inline-item"
+              data-toggle="tooltip" data-placement="top" title="Drupal">
+              <i class="devicon-wordpress-plain-wordmark"></i>
+            </li>
+            <li class="list-inline-item"
               data-toggle="tooltip" data-placement="top" title="Yii Framework">
               <i class="devicon-yii-plain-wordmark"></i>
             </li>
@@ -233,6 +247,10 @@
             <li class="list-inline-item"
               data-toggle="tooltip" data-placement="top" title="Angular Js">
               <i class="devicon-angularjs-plain-wordmark"></i>
+            </li>
+            <li class="list-inline-item"
+              data-toggle="tooltip" data-placement="top" title="Angular Js">
+              <i class="devicon-react-plain-wordmark"></i>
             </li>
             <li class="list-inline-item"
               data-toggle="tooltip" data-placement="top" title="jQuery">
