--- a/index.html
+++ b/index.html
@@ -233,10 +233,6 @@
               <i class="devicon-yii-plain-wordmark"></i>
             </li>
             <li class="list-inline-item"
-              data-toggle="tooltip" data-placement="top" title="Laravel">
-              <i class="devicon-laravel-plain-wordmark"></i>
-            </li>
-            <li class="list-inline-item"
               data-toggle="tooltip" data-placement="top" title="nodejs">
               <i class="devicon-nodejs-plain-wordmark"></i>
             </li>
@@ -288,6 +284,10 @@
             <li class="list-inline-item"
               data-toggle="tooltip" data-placement="top" title="bower">
               <i class="devicon-bower-plain-wordmark"></i>
+            </li>
+            <li class="list-inline-item"
+              data-toggle="tooltip" data-placement="top" title="webpack">
+              <i class="devicon-webpack-plain"></i>
             </li>
             <li class="list-inline-item"
               data-toggle="tooltip" data-placement="top" title="gulp">
